Bug 156463 - crash on exit after editing a chart (gtk3)
Summary: crash on exit after editing a chart (gtk3)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.6.0.1 rc
Hardware: All Linux (All)
: medium critical
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.1 target:7.6.0
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks: Chart GTK3 Crash Exit
  Show dependency treegraph
 
Reported: 2023-07-25 11:22 UTC by Stéphane Guillou (stragu)
Modified: 2023-08-10 14:02 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
gdb backtrace with LO Impress 24.2 alpha0+ on Ubuntu 20.04 (79.21 KB, text/x-log)
2023-07-25 11:31 UTC, Stéphane Guillou (stragu)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stéphane Guillou (stragu) 2023-07-25 11:22:12 UTC
Steps differ depending on component:

Writer:
1. Open Writer
2. Insert chart
3. Close LO, don't save document

Impress:
1. Open Impress
2. Insert chart
3. Exit chart edit mode
4. Enter chart edit mode
5. Close LO, don't save document

Result: crash with gtk3 VCL. No crash with gen.

In console:

terminate called after throwing an instance of 'com::sun::star::uno::DeploymentException'

Repro in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 529dce3d5b695637a1ccc8b4b697d87c5db0d3a2
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Version: 7.6.0.1 (X86_64) / LibreOffice Community
Build ID: 776eaf34564cbf3f034a0ba1fd1d5c32ff9ccf1c
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

No repro in:

Version: 7.5.5.2 (X86_64) / LibreOffice Community
Build ID: ca8fe7424262805f223b9a2334bc7181abbcbf5e
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Bibisected the DeploymentException with linux-64-7.6 repo to first bad commit 9a48cff07da15f2b0c9747729355c94e75304966 which points to core commit:

commit 1ed765c818af2186e459c5ad0eff24dc39a20d34
author	Noel Grandin 	Tue May 23 13:44:46 2023 +0200
committer	Noel Grandin Tue May 23 16:04:32 2023 +0200
tdf#155235 workaround gtk3 accessiblibility crashes on close
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152161

Noel, can you please have a look?
Comment 1 Stéphane Guillou (stragu) 2023-07-25 11:31:15 UTC
Created attachment 188547 [details]
gdb backtrace with LO Impress 24.2 alpha0+ on Ubuntu 20.04
Comment 2 Commit Notification 2023-07-25 16:26:42 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/05d1790f746dfb7367a4c79aa43b00457b7b2cc9

tdf#156463 crash on exit after editing a chart (gtk3)

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Stéphane Guillou (stragu) 2023-07-26 10:06:11 UTC
Fix verified for both Writer and Impress in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 24d0a62bd75b9a895c419aa165da648ab18f134d
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks for the fast response, Noel!
Comment 4 Commit Notification 2023-08-01 14:07:50 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/70141d86a6ccf6f40f16151dfb9c47a94d83a73b

tdf#156463 crash on exit after editing a chart (gtk3)

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-08-08 17:14:10 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-6-0":

https://git.libreoffice.org/core/commit/648e8d04361a69d0d927d283373f0152e678c16b

tdf#156463 crash on exit after editing a chart (gtk3)

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.