tdf#156463 crash on exit after editing a chart (gtk3)

regression from
    commit 1ed765c818af2186e459c5ad0eff24dc39a20d34
    tdf#155235 workaround gtk3 accessiblibility crashes on close

Change-Id: I1a43c7df6394426d8ce09ed382dcc6833dbe1c6b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154893
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>